Added link to object classifier Gitlab

--- a/Methods.tex
+++ b/Methods.tex
@@ -66,6 +66,6 @@ Because we were unable to differentiate whether the disappearance of a fluoresce
 For each timelapse, we quantified the total number of RecB spots that were bound to DNA. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DNA-bound RecB molecules. To estimate the total number of DNA-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DNA-bound, and the spots that disappeared with a faster rate were slow-diffusing complexes. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated.
 
 \subsection*{Code availability}
-Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The Jupyter Notebooks used to make the article figures are also available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
+Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The deep-learning model used to classify cells according to their RecA-associated fluorescence is available on \href{https://gitlab.com/MEKlab/bacmman-object-classifier}{Gitlab}. The Jupyter Notebooks used to make the article figures are available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
 
 
