Backtracked title change

--- a/Article.tex
+++ b/Article.tex
@@ -11,9 +11,9 @@
 \newcommand{\od}{OD$_{600}$} % OD600
 \newcommand{\umsq}{$\upmu$m$^2$} % µm2
 \newcommand{\ums}{$\upmu$m$^2$.s$^{-1}$} % µm2.s-1
-\newcommand{\ncells}[1]{N$_{\text{cells}}$ = #1} % N_cells =
-\newcommand{\nspots}[1]{N$_{\text{spots}}$ = #1} % N_spots =
-\newcommand{\nnucl}[1]{N$_{\text{nucleoids}}$ = #1} % N_nucleoids =
+\newcommand{\ncells}[1]{N$_{\text{cells}}$ = #1} % N_cells = {}
+\newcommand{\nspots}[1]{N$_{\text{spots}}$ = #1} % N_spots = {}
+\newcommand{\nnucl}[1]{N$_{\text{nucleoids}}$ = #1} % N_nucleoids = {}
 
 % Surname of the lead author for the running footer
 \leadauthor{Thédié} 
