Added RecN citations

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -892,3 +892,37 @@ The authors have declared no competing interest.},
    url = {https://www.nature.com/articles/nmeth.3256},
    year = {2015},
 }
+@article{Vickridge2017,
+   abstract = {Aberrant DNA replication is a major source of the mutations and chromosomal rearrangements associated with pathological disorders. In bacteria, several different DNA lesions are repaired by homologous recombination, a process that involves sister chromatid pairing. Previous work in Escherichia coli has demonstrated that sister chromatid interactions (SCIs) mediated by topological links termed precatenanes, are controlled by topoisomerase IV. In the present work, we demonstrate that during the repair of mitomycin C-induced lesions, topological links are rapidly substituted by an SOS-induced sister chromatid cohesion process involving the RecN protein. The loss of SCIs and viability defects observed in the absence of RecN were compensated by alterations in topoisomerase IV, suggesting that the main role of RecN during DNA repair is to promote contacts between sister chromatids. RecN also modulates whole chromosome organization and RecA dynamics suggesting that SCIs significantly contribute to the repair of DNA double-strand breaks (DSBs). Homologous recombination of DNA lesions in bacteria involves sister chromatid pairing. Here, the authors show that RecN promotes contacts between sister chromatids and facilitates repair.},
+   author = {Elise Vickridge and Charlene Planchenault and Charlotte Cockram and Isabel Garcia Junceda and Olivier Espéli},
+   doi = {10.1038/ncomms14618},
+   issn = {2041-1723},
+   issue = {1},
+   journal = {Nature Communications 2017 8:1},
+   keywords = {Bacterial genetics,Double,strand DNA breaks},
+   month = {3},
+   pages = {1-12},
+   pmid = {28262707},
+   publisher = {Nature Publishing Group},
+   title = {Management of E. coli sister chromatid cohesion in response to genotoxic stress},
+   volume = {8},
+   url = {https://www.nature.com/articles/ncomms14618},
+   year = {2017},
+}
+@article{Keyamura2019,
+   abstract = {Bacterial RecN, closely related to the structural maintenance of chromosomes (SMC) family of proteins, functions in the repair of DNA double-strand breaks (DSBs) by homologous recombination. Here we show that the purified Escherichia coli RecN protein topologically loads onto both single-stranded DNA (ssDNA) and double-stranded DNA (dsDNA) that has a preference for ssDNA. RecN topologically bound to dsDNA slides off the end of linear dsDNA, but this is prevented by RecA nucleoprotein filaments on ssDNA, thereby allowing RecN to translocate to DSBs. Furthermore, we found that, once RecN is recruited onto ssDNA, it can topologically capture a second dsDNA substrate in an ATP-dependent manner, suggesting a role in synapsis. Indeed, RecN stimulates RecA-mediated D-loop formation and subsequent strand exchange activities. Our findings provide mechanistic insights into the recruitment of RecN to DSBs and sister chromatid interactions by RecN, both of which function in RecA-mediated DSB repair. Kenji Keyamura and Takashi Hishida demonstrate that RecN binds to single-stranded and double-stranded DNA through topological entrapment and stimulates RecA-mediated strand exchange activity in bacteria. The results provide mechanistic insights into how RecN is recruited to and repairs DNA double-strand breaks.},
+   author = {Kenji Keyamura and Takashi Hishida},
+   doi = {10.1038/s42003-019-0655-4},
+   issn = {2399-3642},
+   issue = {1},
+   journal = {Communications Biology 2019 2:1},
+   keywords = {DNA,DNA recombination,Double,strand DNA breaks},
+   month = {11},
+   pages = {1-12},
+   pmid = {31754643},
+   publisher = {Nature Publishing Group},
+   title = {Topological DNA-binding of structural maintenance of chromosomes-like RecN promotes DNA double-strand break repair in Escherichia coli},
+   volume = {2},
+   url = {https://www.nature.com/articles/s42003-019-0655-4},
+   year = {2019},
+}
