--- a/Article.tex
+++ b/Article.tex
@@ -57,8 +57,7 @@ meriem.elkaroui\at ed.ac.uk
 
 
 \begin{acknowledgements}
-% - David Leach for insightful discussions
-% - Jean for BACMMAN/software developments
+We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
 \end{acknowledgements}
 
 \section*{Bibliography}
