Minor wording edits

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -14,10 +14,10 @@ A common source of DSBs in \emph{E. coli} is the collision of the replication fo
 DSB repair is the first step of a general response to DNA damage known as the SOS response\cite{Baharoglu2014}. The formation of the RecA nucleoprotein filament triggers the auto-proteolysis of the LexA transcriptional repressor, which results in the activation of the genes of the SOS regulon. Among those are RecA, inhibitors of cell division such as SulA, and the SMC (structural maintenance of chromosomes)-like protein RecN. As a result, the cells elongate\cite{Bos2015}, and their DNA is compacted at the cell centre\cite{Odsbu2014}.
 
 % RecB/RecA mutants
-Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome\cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are however capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity\cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA\cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected\cite{Anderson1999}. Despite the loss of its RecA loading activity, the \teneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecOR complex displaces SSB and loads RecA, allowing for homologous recombination to occur\cite{Ivancic-Bace_2003}.
+Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome\cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are however capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity\cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA\cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected\cite{Anderson1999}. Despite the loss of its RecA loading activity, the \teneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex displaces SSB and loads RecA, allowing for homologous recombination to occur\cite{Ivancic-Bace_2003}.
 
 % Previous microscopy studies of DSB repair
-Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in-vitro} studies have quantified the rate of DNA unwinding by RecBCD\cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments\cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology searching\cite{Forget2012,Ragunathan2012}. Complimentary to the \emph{in-vitro} work, \emph{in-vivo} studies have provided insight into DNA end resection by RecBCD\cite{Wiktor2018}, confirming its translocation speed and high processivity. More recently, the diffusion of RecB was quantified \emph{in-vivo} at the single-molecule level\cite{Lepore2023}. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci\cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments\cite{Kidane2005}, or bundles of filaments\cite{Lesterlin2013,Ghodke2019}. Of note, RecA imaging is particularly challenging because fluorescent protein fusions are not fully functional. The homology search and pairing processes were also observed \emph{in-vivo}, showing that DSBs are brought to the centre of the cell during the repair process\cite{Badrinarayanan2015,Wiktor2021}. Several aspects of DSB processing by RecBCD \emph{in-vivo} have not yet been fully elucidated: how long does RecBCD stay bound to DNA after recognising a DSB? Does the binding time change under different levels of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \emph{E. coli}, which would enhance future research into antimicrobial resistance.
+Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in-vitro} studies have quantified the rate of DNA unwinding by RecBCD\cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments\cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology searching\cite{Forget2012,Ragunathan2012}. Complimentary to the \emph{in-vitro} work, \emph{in-vivo} studies have provided insight into DNA end resection by RecBCD\cite{Wiktor2018}, confirming its translocation speed and high processivity. More recently, the diffusion of RecB was quantified \emph{in-vivo} at the single-molecule level\cite{Lepore2023}. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci\cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments\cite{Kidane2005}, or bundles of filaments\cite{Lesterlin2013,Ghodke2019}. RecA imaging is particularly challenging because fluorescent protein fusions are not fully functional. The homology search and pairing processes were also observed \emph{in-vivo}, showing that DSBs are brought to the centre of the cell during the repair process\cite{Badrinarayanan2015,Wiktor2021}. However, several aspects of DSB processing by RecBCD \emph{in-vivo} have not yet been fully elucidated: how long does RecBCD stay bound to DNA after recognising a DSB? Does the binding time change under different levels of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \emph{E. coli}, which would enhance future research into antimicrobial resistance.
 
 % Overview of the article
-To address these questions, we imaged RecB binding to DNA in living \emph{E. coli} cells exposed to various concentrations of ciprofloxacin. We measured the duration of DNA binding and found that it was not affected by the ciprofloxacin concentration within the tested range (0 to 30 ng/ml). Concurrently, imaging RecA and the bacterial nucleoid provided a more comprehensive view of the DNA repair process under our experimental conditions. We observed an accumulation of RecA filaments and compaction of the bacterial nucleoid, both of which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, to investigate the role of RecA in the dissociation of RecB from DNA, we imaged RecB in the \dreca\ and \teneighty\ mutants, revealing that RecA does not influence RecB dissociation.
+To address these questions, we imaged RecB binding to DNA in living \emph{E. coli} cells exposed to various concentrations of ciprofloxacin. We measured the duration of DNA binding and found that it was not affected by the ciprofloxacin concentration within the tested range (0 to 30 ng/ml). Concurrently, imaging RecA and the bacterial nucleoid provided a more comprehensive view of the DNA repair process under our experimental conditions. We observed an accumulation of RecA filaments and compaction of the bacterial nucleoid, both of which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \teneighty\ mutants, and revealed that RecA does not influence RecB dissociation.
