Changed paths to relative

--- a/Notebooks/Ciprofloxacin/Gam_overexpression.ipynb
+++ b/Notebooks/Ciprofloxacin/Gam_overexpression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
     "import seaborn.objects as so\n",
     "from seaborn import plotting_context\n",
     "\n",
-    "data = (DatasetPool(path='/media/daniel/HDD Daniel/DanielThedie/BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='./../../BACMMAN_datasets',\n",
     "                    dsList=['240227_1', '240227_2', '240227_3',\n",
     "                            '230725_1', '230725_2', '230126_DT23', '230719_1', '230719_2', '240424_1', '240612_1', '240620_1',\n",
     "                            '230118_DT23', '230720_1', '230720_2', '230726_cipro30', '230824_1', '230829_1', '230201_DT23', '230504_2sec', '230718_2sec', '240424_2', '240612_2', '240620_2',\n",
