--- a/Notebooks/Ciprofloxacin/RecA.ipynb
+++ b/Notebooks/Ciprofloxacin/RecA.ipynb
@@ -39,7 +39,7 @@
     "from pyberries.data import DatasetPool, get_histogram\n",
     "import seaborn.objects as so\n",
     "\n",
-    "data = (DatasetPool(path='/media/daniel/HDD Daniel/DanielThedie/BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='./../../BACMMAN_datasets/',\n",
     "                    dsList=['230725_1', '230725_2', '230809_1',\n",
     "                            '230817_1', '230810_1', '230816_1',\n",
     "                            '230906_1', '230906_2', '230912_1',\n",
