--- a/Notebooks/Ciprofloxacin/RecB_spots.ipynb
+++ b/Notebooks/Ciprofloxacin/RecB_spots.ipynb
@@ -65,7 +65,7 @@
     "from seaborn import plotting_context\n",
     "import pandas as pd\n",
     "\n",
-    "data = (DatasetPool(path='/media/daniel/HDD Daniel/DanielThedie/BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='./../../BACMMAN_datasets',\n",
     "                    dsList=['230725_1', '230725_2', '230126_DT23', '230719_1', '230719_2', '240424_1', '240612_1', '240620_1',\n",
     "                            '230817_1', '230810_1', '230816_1', '240717_3', '240904_1', '240904_2',\n",
     "                            '230906_2', '230912_1', '230912_2', '240620_3', '240717_1', '240717_2',\n",
