--- a/Notebooks/Mutants/Nucleoid.ipynb
+++ b/Notebooks/Mutants/Nucleoid.ipynb
@@ -47,7 +47,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "data = (DatasetPool(path='/media/daniel/HDD Daniel/DanielThedie/BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='./../../BACMMAN_datasets',\n",
     "                    dsList=['240424_1', '240612_1', '240620_1',\n",
     "                            '240424_2', '240612_2', '240620_2',\n",
     "                            '240424_3', '240612_3', '240619_1',\n",
